--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -40,6 +40,24 @@
     },
     {
       "id": 3,
+      "src": "/img/ui/mobile_1.jpg",
+      "type": "UI ja UX",
+      "recipient": "Opinnäytetyöprojeti",
+      "description": [
+        "Opinnäytetyöprojekti, jossa suunniteltiin mobiilikäyttöliittymä Salpausselkä Geopark -applikaatiolle.",
+        "Suunnittelua lähestyttiin mobile-first -menetelmin. Ulkoasun tyyliteltiin Googlen Material Designia mukaillen."
+      ],
+      "tools": "Gravit Designer, Proto.io",
+      "slides": [
+        "/img/ui/mobile_1.jpg",
+        "/img/ui/mobile_2.jpg",
+        "/img/ui/mobile_3.jpg",
+        "/img/ui/mobile_4.jpg",
+        "/img/ui/mobile_5.jpg"
+      ]
+    },
+    {
+      "id": 4,
       "src": "/img/ui/KemppiUI.jpg",
       "type": "UI ja UX",
       "recipient": "Kemppi Hackathon LAMKin opiskejoille",
@@ -48,10 +66,11 @@
         "Tiimin hackathon tuotos voitti 2. sijan kilpailussa ja sai erikoismaininnan käyttöliittymäsuunnitelusta."
       ],
       "demo": "https://jlaurikainen.github.io/KemppiHackathon/",
+      "code": "https://github.com/jlaurikainen/KemppiHackathon",
       "tools": "HTML, CSS, Bootstrap, Bootswatch"
     },
     {
-      "id": 4,
+      "id": 5,
       "src": "/img/ui/LahtiAquaHackathon.jpg",
       "type": "UI ja UX",
       "recipient": "Lahti Aqua Hackathon LAMKin opiskelijoille",
@@ -62,10 +81,11 @@
       ],
       "tools": "HTML, CSS, Javascript, Bootstrap, Bootswatch",
       "demo": "https://jlaurikainen.github.io/LahtiAquaHackathon/",
+      "code": "https://github.com/jlaurikainen/LahtiAquaHackathon",
       "url": "https://www.ladec.fi/tiedotteet/lahti-aqua-haastoi-hackthonissa-opiskelijat-uudistamaan-verkostosaneerausprojektien-viestinnan"
     },
     {
-      "id": 5,
+      "id": 6,
       "src": "/img/3d/Subdiv_Polymodeling_Webster.jpg",
       "type": "3D-mallinnus",
       "recipient": "Opiskelijatyö",
@@ -76,7 +96,7 @@
       "tools": "3DS Max, Photoshop"
     },
     {
-      "id": 6,
+      "id": 7,
       "src": "/img/unity/6.jpg",
       "type": "3D-mallinnus, Teksturointi, Unity 3D",
       "recipient": "Opiskelijatyö",
@@ -95,7 +115,7 @@
       ]
     },
     {
-      "id": 7,
+      "id": 8,
       "src": "/img/3d/Lowpoly_House.jpg",
       "type": "3D-mallinnus, Animaatio",
       "recipient": "Opiskelijatyö",
