Slide localization fix

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -126,7 +126,8 @@
       "tools": "Cinema 4D, Photoshop",
       "slides": [
         "/img/3d/Lowpoly_House.jpg",
-        "/img/3d/Lowpoly_Island.jpg"
+        "/img/3d/Lowpoly_Island.jpg",
+        "/img/3d/Animation_Character.jpg"
       ]
     }
   ]
