Navigation scroll fix, css fixes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,7 @@
     "visu": "Visualisation",
     "adobe": "Adobe Programs",
     "proto": "Prototyping",
-    "tech": "Technology",
+    "tech": "Technologies",
     "toAbout": "Interested in knowing more about me and my skills?"
   },
   "about": {
