--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,12 +22,14 @@
     "toAbout": "Interested in knowing more about me and my skills?"
   },
   "about": {
-    "p1": "I qualified as an engineer in the spring of 2018, majoring in Mediatechnology. I've had a passion especially for visualisation and front-end technologies since I was very young. My greatest strengths lie in user interface design and 3d-modeling. That doesn't mean I avoid coding however, and infact I have familiarized myself with different front- and back-end frameworks even outside school courses.",
+    "p1": "I qualified as an engineer in the spring of 2018, majoring in Mediatechnology. I've had a passion, even from a young age, for visualisation and front-end technologies. My greatest strengths lie in user interface design and 3d-modeling. That doesn't mean I avoid coding however, and infact I have familiarized myself with different front- and back-end frameworks even outside my studies.",
     "p2": "I'm interested in combining technology and visualisation into something that is usable for the end user. I'm always learning new things and I try to understand all aspects of technologies so that I might apply my existing experience in all new situations. Challenges keep me motivated."
   },
+  "cvLink": "/files/Juha_Laurikainen_CV_EN.pdf",
   "projects": [
     {
       "id": 1,
+      "thumb": "/img/signage/IskuCenter_Thumb.jpg",
       "src": "/img/signage/IskuCenter.jpg",
       "type": "Signage",
       "recipient": "LUAS Campus Development, Isku Oy",
@@ -40,24 +42,26 @@
     },
     {
       "id": 2,
+      "thumb": "/img/visualization/3DLamk_Thumb.jpg",
       "src": "/img/visualization/3DLamk.jpg",
       "type": "3D-visualization and -modeling",
       "recipient": "LUAS Campus Development",
       "description": [
-        "Added 3d-visualization of LUAS M19 campus room D267 to the 3d.lamk-fi -service. The framework of the room was already modeled, and was used a base for the furnishing. On top of modeling, the models were UV-unwrapped and textured. A visual furnituring catalog for the room was used as a reference for the modeling, along with Isku furniture reference images.",
-        "The project also included in it a redesign for the 3d.lamk.fi -service layout and some functionality improvements for fetching the room information dynamically."
+        "I added a 3d-visualization of LUAS M19 campus room D267 to the 3d.lamk-fi -service. The framework of the room was already modeled, and was used a base for further modeling. The models were also UV-unwrapped and textured. A visual furnishing catalog for the room was used as a reference for the modeling, along with Isku furniture reference images.",
+        "The project also included in it a redesign for the 3d.lamk.fi -service interface layout and some functionality improvements for fetching the room information dynamically."
       ],
       "demo": "http://3d.lamk.fi/",
       "tools": "Blender, HTML, CSS, Javascript, jQuery, Bootstrap, Sketchfab"
     },
     {
       "id": 3,
+      "thumb": "/img/ui/mobile_1_Thumb.jpg",
       "src": "/img/ui/mobile_1.jpg",
       "type": "UI and UX",
       "recipient": "Thesis Project",
       "description": [
-        "Thesis project in which the goal was to design a mobile user interface for Salpausselkä Geopark app.",
-        "The design process was approached using mobile-first priciples and the user interface styling implemented Google's Material Design."
+        "My thesis project in which the goal was to design a mobile user interface for Salpausselkä Geopark application.",
+        "The design process was approached using mobile-first principles and the user interface styling implemented Google's Material Design."
       ],
       "tools": "Gravit Designer, Proto.io",
       "slides": [
@@ -70,6 +74,7 @@
     },
     {
       "id": 4,
+      "thumb": "/img/ui/KemppiUI_Thumb.jpg",
       "src": "/img/ui/KemppiUI.jpg",
       "type": "UI and UX",
       "recipient": "Kemppi Hackathon for LUAS students",
@@ -83,13 +88,14 @@
     },
     {
       "id": 5,
+      "thumb": "/img/ui/LahtiAquaHackathon_Thumb.jpg",
       "src": "/img/ui/LahtiAquaHackathon.jpg",
       "type": "UI and UX",
       "recipient": "Lahti Aqua Hackathon for LUAS students",
       "description": [
-        "A one-day long hackathon team-contest event organized by Lahti Aqua. The goal of the project was to create a user interface design for a mobile app, additionally the team was asked to design the database infrastructure and make a suggestion on what technologies should be used to implement the application.",
-        "The contest was completed in a four-man team, with one team member focusing on the back-end, two on the user interface and one working as the Scrum-master. The team ended up suggesting that the application should be implemented using hybrid-technologies, so that it would be possible to build the application for the Android, iOS and, if need be, web-platform.",
-        "I participated in the project as a user interface designer. And for the presentation, I created a website with which to demonstrate the functionality of the app using Chrome devtools.",
+        "A one-day long hackathon team-contest event organized by Lahti Aqua. The goal of the project was to create a user interface design for a mobile application, additionally the team was asked to design the database infrastructure and make a suggestion on what technologies should be used to implement the application.",
+        "The contest was completed in a four-man team, with one team member focusing on the back-end, two on the user interface and one working as the Scrum-master. The team ended up suggesting that the application should be implemented using hybrid-technologies, so that it would be possible to build the application for Android, iOS and, if need be, web-platforms.",
+        "I participated in the project as a user interface designer. And for the presentation, I created a website with which to demonstrate the functionality of the application using Chrome devtools.",
         "The team's production won the 1st place price in the contest."
       ],
       "tools": "HTML, CSS, Javascript, Bootstrap, Bootswatch",
@@ -99,6 +105,7 @@
     },
     {
       "id": 6,
+      "thumb": "/img/3d/Subdiv_Polymodeling_Webster_Thumb.jpg",
       "src": "/img/3d/Subdiv_Polymodeling_Webster.jpg",
       "type": "3D-modeling",
       "recipient": "Student Project",
@@ -110,6 +117,7 @@
     },
     {
       "id": 7,
+      "thumb": "/img/unity/6_Thumb.jpg",
       "src": "/img/unity/6.jpg",
       "type": "3D-modeling, Texturing, Unity 3D",
       "recipient": "Student Project",
@@ -129,6 +137,7 @@
     },
     {
       "id": 8,
+      "thumb": "/img/3d/Lowpoly_House_Thumb.jpg",
       "src": "/img/3d/Lowpoly_House.jpg",
       "type": "3D-modeling, Animation",
       "recipient": "Student Project",
